# xcm-robobank-prototype

./: .gitattributes  .gitignore  Cargo.toml  README.md
config/: palletSession.json  rococo.beefy.json  rococo.json
keytool/: Cargo.toml
keytool/src/: main.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  service.rs
pallets/: types.json
pallets/client/: Cargo.toml
pallets/client/src/: lib.rs  mock.rs  tests.rs
pallets/common/: Cargo.toml
pallets/common/src/: lib.rs
pallets/service/: Cargo.toml
pallets/service/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: config.sh  init.sh  register.py  requirements.txt
