[features]
default = ['std']
std = [
    'codec/std',
    'xcm/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    #'polkadot-primitives/std',
    #'sp-core/std',
    #'sp-io/std',
    #'sp-runtime/std',
    #'xcm-builder/std',
    'xcm-executor/std',
    'pallet-common/std',
    #"cumulus-primitives-core/std",
    #'cumulus-pallet-xcm-handler/std',
    #'polkadot-parachain/std',
]
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.xcm]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'
version = '0.8.22'

[dependencies.xcm-executor]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'
version = '0.8.22'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.cumulus-primitives-core]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'
default-features = false

[dependencies.log]
version = "0.4.8"

[dependencies.pallet-common]
path = "../common"
default-features = false

[dev-dependencies]
serde = { version = "1.0.101" }

[dev-dependencies.sp-core]
#default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dev-dependencies.sp-io]
#default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dev-dependencies.sp-runtime]
#default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dev-dependencies.xcm-builder]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'

[dev-dependencies.cumulus-pallet-xcm-handler]
#default-features = false
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'

[dev-dependencies.cumulus-pallet-parachain-system]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'


[dev-dependencies.polkadot-parachain]
#default-features = false
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'

[dev-dependencies.pallet-balances]
#default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[package]
authors = ['Anonymous']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-robonomics-client'
readme = 'README.md'
repository = 'https://github.com/paritytech/substrate/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
