[package]
name = "pallet-common"
version = "0.1.0"
authors = ["ddulesov <dmitry.dulesov@gmail.com>"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    #'sp-std/std',
    'xcm/std',
    #'polkadot-primitives/std',
    #'cumulus-primitives-core/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'


[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

#[dependencies.sp-std]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#branch = 'rococo-v1'
#version = '3.0.0'

[dependencies.xcm]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'
version = '0.8.22'

#[dependencies.polkadot-primitives ]
#default-features = false
#git = "https://github.com/paritytech/polkadot"
#branch = 'rococo-v1'
#version = '0.8.22'

#[dependencies.cumulus-primitives-core]
#git = 'https://github.com/paritytech/cumulus.git'
#branch = 'rococo-v1'
#default-features = false
